styles.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
*{
    box-sizing: border-box;
}
body{
    font-family: 'Lobster', cursive;
    margin: 0px;
}
:root{
    --primary-color: #fbbf24;
}
#input-txt{
    display: block;
    width: 60%;
    height: 30vh;
    margin: auto;
    font-family: 'Lobster', cursive;
    font-size: 1.25rem;
}
#btn-translate{
    display: block;
    width: 13%;
    height: 10vh;
    margin: auto;
    margin-top: 1rem;
    background-color: var(--primary-color);
    font-family: 'Lobster', cursive;
    font-size: 1rem;
    border-radius: 0.5rem ;
}

h2{
    text-align: center;
}

#output-txt{
    display: block;
    margin: auto;
    width: 60%;
    height: 30vh;
    border: solid 2px;
    margin-bottom: 1rem;
    padding: 0.5rem;
}
.header{
    width: auto;
    height: 75px;
    text-align: center;
    background-color: var(--primary-color);
    border-radius: 0rem 0rem 1rem 1rem;
    margin-bottom: 1rem ;
}
.footer{
    padding: 1rem 1rem;
    width: auto;
    height: 100px;
    text-align: center;
    background-color: var(--primary-color);
    border-radius: 1rem 1rem 0rem 0rem;
}
.heading{
    padding-top: 1rem;
    font-size: x-large;
}

